Correct spacing for search icon in navbar

--- a/foundation/public/css/erpnext-org-theme.css
+++ b/foundation/public/css/erpnext-org-theme.css
@@ -8,14 +8,14 @@ a {
 }
 
 .js-search-form {
-  right: 0.75rem;
+	right: 0.75rem;
 }
 
 .js-search-input-icon {
-  position: absolute;
-  right: 1.75rem;
-  top: 50%;
-  transform: translateY(-50%);
+	position: absolute;
+	right: 0.25rem;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .js-search-icon {
@@ -24,7 +24,6 @@ a {
 
 .js-search-input {
 	border: 1px solid var(--fn-green-light);
-	margin: 0 0.75rem;
 }
 
 .logo {
